--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -329,6 +329,7 @@ header .header-data .header-right h4::before {
     width: 100%;
     position: fixed;
     bottom: 0;
+    left: 0;
     z-index: 999;
     height: auto;
   }
@@ -348,19 +349,14 @@ header .header-data .header-right h4::before {
 }
 @media (max-width: 768px) {
   .left-sidebar .left-sidelist {
-    padding-top: 20px;
+    padding-top: 0;
     display: flex;
     justify-content: center;
     align-items: center;
   }
 }
-@media (max-width: 575px) {
-  .left-sidebar .left-sidelist {
-    padding-top: 14px;
-  }
-}
 .left-sidebar .left-sidelist li {
-  letter-spacing: 5px;
+  letter-spacing: 2px;
   border-bottom: 2px solid #ffffff;
   padding-bottom: 10px;
   padding-left: 20px;
@@ -370,21 +366,36 @@ header .header-data .header-right h4::before {
 @media (max-width: 768px) {
   .left-sidebar .left-sidelist li {
     width: max-content;
-    margin-left: 10px;
-    margin-right: 10px;
-    padding-left: 0;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-bottom: 0;
     border-bottom: 0;
     text-align: center;
   }
 }
-@media (max-width: 320px) {
+@media (max-width: 575px) {
   .left-sidebar .left-sidelist li {
-    margin-left: 5px;
-    margin-right: 5px;
+    width: 87px;
+  }
+  .left-sidebar .left-sidelist li:nth-child(even) {
+    background-color: #287AA5;
+  }
+}
+@media (max-width: 575px) {
+  .left-sidebar .left-sidelist li {
+    padding-left: 5px;
+    padding-right: 5px;
   }
 }
 .left-sidebar .left-sidelist li .no-space {
   letter-spacing: 0;
+}
+@media (max-width: 575px) {
+  .left-sidebar .left-sidelist li .no-space {
+    letter-spacing: 2px !important;
+  }
 }
 .left-sidebar .left-sidelist li a {
   color: #ffffff !important;
@@ -395,7 +406,7 @@ header .header-data .header-right h4::before {
 .left-sidebar .left-sidelist li a.active {
   color: #fbee6c !important;
 }
-@media (max-width: 375px) {
+@media (max-width: 575px) {
   .left-sidebar .left-sidelist li a {
     font-size: 12px;
     line-height: 16px;
@@ -658,7 +669,7 @@ header .header-data .header-right h4::before {
 }
 .right-sidebar .table-nav .hours-div {
   display: flex;
-  gap: 10px;
+  gap: 18px;
   align-items: center;
   margin-bottom: 29px;
 }
@@ -999,6 +1010,9 @@ footer .footer-data .footer-right li:last-child::after {
 .right-sidebar .profile_data .login-data {
   margin-bottom: 39px;
 }
+.right-sidebar .profile_data .login-data.email-logindata .login-detail h4:last-child {
+  width: 380px;
+}
 @media (max-width: 575px) {
   .right-sidebar .profile_data .login-data {
     margin-bottom: 26px;
@@ -1016,6 +1030,10 @@ footer .footer-data .footer-right li:last-child::after {
   .right-sidebar .profile_data .login-data.mb-35 {
     margin-bottom: 26px;
   }
+}
+.right-sidebar .profile_data .login-data.mb-35 li {
+  display: flex;
+  gap: 55px;
 }
 @media (max-width: 575px) {
   .right-sidebar .profile_data .login-data.mb-35 li {
@@ -1515,7 +1533,7 @@ footer .footer-data .footer-right li:last-child::after {
   margin-bottom: 15px;
   width: 100%;
 }
-@media (max-width: 767px) {
+@media (max-width: 575px) {
   .quotation-tab {
     margin-bottom: 0;
   }
@@ -1627,6 +1645,14 @@ footer .footer-data .footer-right li:last-child::after {
     padding: 10px !important;
   }
 }
+.quontation-table .que-head.qutationpage {
+  padding: 10px 16px !important;
+}
+@media (max-width: 992px) {
+  .quontation-table .que-head.qutationpage {
+    padding: 10px !important;
+  }
+}
 .quontation-table .que-head {
   display: flex;
   gap: 28px;
@@ -1646,6 +1672,7 @@ footer .footer-data .footer-right li:last-child::after {
 }
 .quontation-table .que-head.puprple-bg {
   background-color: #B44FB0;
+  padding: 10px 17px !important;
 }
 @media (max-width: 1440px) {
   .quontation-table .que-head {
@@ -1723,7 +1750,7 @@ footer .footer-data .footer-right li:last-child::after {
 .quontation-table .que-body .que-tr {
   display: flex;
   align-items: center;
-  gap: 28px;
+  gap: 27px;
   padding: 14px 10px 14px 20px;
 }
 .quontation-table .que-body .que-tr.quatation-gap {
@@ -1934,6 +1961,12 @@ footer .footer-data .footer-right li:last-child::after {
   width: 100px;
   height: 58px;
 }
+@media (max-width: 1024px) {
+  .quontation-table .que-body .que-tr .que-gray-flex .register-btn {
+    padding: 7px 8px;
+    width: 64px;
+  }
+}
 @media (max-width: 768px) {
   .quontation-table .que-body .que-tr .que-gray-flex .register-btn {
     padding: 7px 20px;
@@ -1957,6 +1990,12 @@ footer .footer-data .footer-right li:last-child::after {
   border-radius: 20px;
   width: 100px;
   height: 58px;
+}
+@media (max-width: 1024px) {
+  .quontation-table .que-body .que-tr .que-gray-flex .red-btn {
+    padding: 7px 8px;
+    width: 64px;
+  }
 }
 @media (max-width: 768px) {
   .quontation-table .que-body .que-tr .que-gray-flex .red-btn {
@@ -2144,7 +2183,8 @@ footer .footer-data .footer-right li:last-child::after {
   background-color: #2196f3;
 }
 .grid-table .table-head img {
-  max-width: none;
+  width: 80px;
+  height: 57px;
   object-fit: cover;
 }
 @media (max-width: 575px) {
@@ -2165,7 +2205,7 @@ footer .footer-data .footer-right li:last-child::after {
 }
 
 .head-w {
-  width: 160px;
+  width: 180px;
 }
 @media (max-width: 575px) {
   .head-w {
@@ -2175,6 +2215,7 @@ footer .footer-data .footer-right li:last-child::after {
 
 .custm-w-1 {
   width: 250px;
+  word-break: break-all;
 }
 @media (max-width: 992px) {
   .custm-w-1 {
@@ -2203,7 +2244,8 @@ footer .footer-data .footer-right li:last-child::after {
 }
 
 .custm-w-2 {
-  width: 100px;
+  width: 114px;
+  word-break: break-all;
 }
 @media (max-width: 575px) {
   .custm-w-2 {
@@ -2213,6 +2255,7 @@ footer .footer-data .footer-right li:last-child::after {
 
 .custm-w-3 {
   width: 100px;
+  word-break: break-all;
 }
 @media (max-width: 575px) {
   .custm-w-3 {
@@ -2264,6 +2307,10 @@ footer .footer-data .footer-right li:last-child::after {
 
 .height-2 {
   height: 200px;
+}
+
+.word-break {
+  word-break: break-all;
 }
 
 .detail-back {
@@ -4039,6 +4086,11 @@ button:focus:not(:focus-visible) {
   font-weight: 700;
   color: #3A3A3A;
   margin-bottom: 12px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .slider .slide-card ul li {
   font-size: 18px;
@@ -4052,6 +4104,13 @@ button:focus:not(:focus-visible) {
 }
 .slider .slide-card ul li img {
   object-fit: contain;
+}
+.slider .slide-card ul li span {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .btm-slider {
@@ -4107,9 +4166,21 @@ button:focus:not(:focus-visible) {
   max-width: 192px;
   margin-bottom: 30px;
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .btm-slider .left-btm-data .strock-h2 h2 {
     text-align: end;
+  }
+}
+@media (max-width: 320px) {
+  .btm-slider .left-btm-data .strock-h2 h2 {
+    font-size: 40px;
+    line-height: 67px;
+  }
+}
+@media (max-width: 767px) {
+  .btm-slider .left-btm-data .strock-h2 {
+    display: flex;
+    justify-content: end;
   }
 }
 .btm-slider .left-btm-data .btn {
@@ -4250,7 +4321,7 @@ button:focus:not(:focus-visible) {
 .custom-none1 {
   display: none;
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .custom-none1 {
     display: block;
   }
@@ -5769,6 +5840,7 @@ button:focus:not(:focus-visible) {
   font-size: 16px;
   line-height: 22px;
   font-weight: 500;
+  letter-spacing: 1px;
 }
 .edmall-pop .popup-data .pop-form form input:focus {
   box-shadow: none;
