--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -191,6 +191,10 @@ letter-spacing: 2px;
   border-radius: 20px;
   width: 100px;
   height: 58px;
+  @media (max-width: #{$xl}) {
+    padding: 7px 8px;
+    width: 64px;
+  }
   @media (max-width: #{$med}) {
     padding: 7px 20px;
     width: 80px;
@@ -503,6 +507,7 @@ header {
     width: 100%;
     position: fixed;
     bottom: 0;
+    left: 0;
     z-index: 999;
     height: auto;
   }
@@ -517,35 +522,46 @@ header {
     padding-top: 81px;
     margin: 0 10px 0 13px;
     @media (max-width: #{$med}) {
-      padding-top: 20px;
+      padding-top: 0;
       display: flex;
       justify-content: center;
       align-items: center;
     }
-    @media (max-width: #{$sm}) {
-      padding-top: 14px;
-    }
+   
     li {
-      @include latter-space();
+      letter-spacing: 2px;
       border-bottom: 2px solid $white-color;
       padding-bottom: 10px;
       padding-left: 20px;
       margin-bottom: 16px;
       width: 100%;
+
+      
       @media (max-width: #{$med}) {
         width: max-content;
-        margin-left: 10px;
-        margin-right: 10px;
-        padding-left: 0;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding-left: 10px;
+        padding-right: 10px;
+        margin-bottom: 0;
         border-bottom: 0;
         text-align: center;
       }
-      @media (max-width: #{$xss}) {
-        margin-left: 5px;
-        margin-right: 5px;
+      @media (max-width: #{$sm}) {
+       width: 87px;
+       &:nth-child(even){
+        background-color: #287AA5;
+      }
+      }
+      @media (max-width: #{$sm}) {
+        padding-left: 5px;
+        padding-right: 5px;
       }
       .no-space {
      @include no-space();
+     @media (max-width: #{$sm}) {
+     letter-spacing: 2px !important;
+    }
       }
       a {
         color: $white-color !important;
@@ -555,7 +571,7 @@ header {
         &.active {
           color: #fbee6c !important;
         }
-        @media (max-width: #{$xs}) {
+        @media (max-width: #{$sm}) {
           font-size: 12px;
           line-height: 16px;
         }
@@ -803,7 +819,7 @@ header {
     }
     .hours-div {
       display: flex;
-      gap: 10px;
+      gap: 18px;
       align-items: center;
       margin-bottom: 29px;
       @media (max-width: #{$med}) {
@@ -1128,6 +1144,13 @@ footer {
     }
     .login-data {
       margin-bottom: 39px;
+      &.email-logindata{
+        .login-detail{
+          h4:last-child{
+            width: 380px;
+          }
+        }
+      }
       @media (max-width: #{$sm}) {
         margin-bottom: 26px;
       }
@@ -1140,6 +1163,8 @@ footer {
           margin-bottom: 26px;
         }
         li {
+          display: flex;
+          gap: 55px;
           @media (max-width: #{$sm}) {
             flex-direction: column;
             gap: 6px;
@@ -1605,7 +1630,7 @@ footer {
   display: flex;
   margin-bottom: 15px;
   width: 100%;
-  @media (max-width: 767px) {
+  @media (max-width: 575px) {
    margin-bottom: 0;
   }
   li{
@@ -1750,6 +1775,12 @@ footer {
       padding: 10px !important;
      }
   }
+  .que-head.qutationpage{
+    padding: 10px 16px !important; 
+    @media (max-width: #{$lg}) {
+      padding: 10px !important;
+     }
+  }
   .que-head {
     
     display: flex;
@@ -1775,6 +1806,7 @@ footer {
    
     &.puprple-bg{
       background-color: #B44FB0;
+      padding: 10px 17px !important;
     }
     @media (max-width: #{$xlll}) {
       padding: 10px;
@@ -1810,7 +1842,7 @@ footer {
       display: flex;
       align-items: center;
       // justify-content: space-between;
-      gap: 28px;
+      gap: 27px;
       padding: 14px 10px 14px 20px;
       &.quatation-gap{
         gap: 31px;
@@ -2126,7 +2158,9 @@ footer {
     }
 
     img {
-      max-width: none;
+      // max-width: none;
+      width: 80px;
+      height: 57px;
       object-fit: cover;
       @media (max-width: #{$sm}) {
         width: 230px;
@@ -2143,13 +2177,14 @@ footer {
   width: 18px;
 }
 .head-w {
-  width: 160px;
+  width: 180px;
   @media (max-width: #{$sm}) {
     width: 100%;
   }
 }
 .custm-w-1 {
   width: 250px;
+  word-break: break-all;
   @media (max-width: #{$lg}) {
     width: 200px;
   }
@@ -2167,13 +2202,15 @@ footer {
   }
 }
 .custm-w-2 {
-  width: 100px;
+  width: 114px;
+  word-break: break-all;
   @media (max-width: #{$sm}) {
     width: auto;
   }
 }
 .custm-w-3 {
   width: 100px;
+  word-break: break-all;
   @media (max-width: #{$sm}) {
     width: auto;
   }
@@ -2210,6 +2247,9 @@ footer {
 }
 .height-2 {
   height: 200px;
+}
+.word-break{
+  word-break: break-all;
 }
 // ---dashboard table end
 
@@ -3709,6 +3749,11 @@ p{
       font-weight: 700;
       color: #3A3A3A;
       margin-bottom: 12px;
+        display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
     ul {
       li{
@@ -3720,8 +3765,16 @@ p{
        display: flex;
        align-items: baseline;
        gap: 10px;
+       
        img{
         object-fit: contain;
+       }
+       span{
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
        }
       }
     }
@@ -3777,10 +3830,19 @@ p{
         width: 100%;
         max-width: 192px;
         margin-bottom: 30px;
-        @media (max-width: #{$sm}) {
+        @media (max-width: 767px) {
          text-align: end;
         }
+        @media (max-width: 320px) {
+          font-size: 40px;
+          line-height: 67px;
+         }
       }
+      @media (max-width: 767px) {
+        display: flex;
+        justify-content: end;
+       }
+    
     }
     .btn{
       @include btn-yel2();
@@ -3929,7 +3991,7 @@ $dot-bg-color: transparent;
 .custom-none1{
    display: none;
  
-  @media (max-width: #{$sm}) {
+  @media (max-width: 767px) {
    display: block;
  }
 }
@@ -5286,11 +5348,11 @@ gap: 28px;
         margin: 0;
         width: 100%;
         &::placeholder{
-          color: #555555
-          ;
+          color: #555555 ;
           font-size: 16px;
           line-height: 22px;
           font-weight: 500;
+          letter-spacing: 1px;
         }
         &:focus{
           box-shadow: none;
